--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-certifi==2021.10.8
-click==8.0.3
-flask==2.0.2
-jinja2==3.0.2
-setuptools==58.0.4
-werkzeug==2.0.2
-wheel==0.37.1
+certifi==2021.5.30
+click==7.1.2
+Flask==1.1.2
+gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==2.0.1
+Werkzeug==1.0.1
+wincertstore==0.2
